ホーム画面のランダム出題ボタンのテキストを「ランダム」に変更

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="previous">Previous</string>
     <string name="exam_category">分野別</string>
     <string name="exam_list">一覧</string>
-    <string name="exam_random">ランダム出題</string>
+    <string name="exam_random">ランダム</string>
     <string name="home">Home</string>
     <string name="learn">Learn</string>
     <string name="problem_list_title">Problem List</string>
